# cherrystudio-qq-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  agents.txt  agents_dump.json  auto_reply.py  config.example.json  conversation_store.py  generate_install_url.py  inspect_cherry.py  inspect_cherry_v2.py  install_info.txt  napcat_client.py  package.json  pyproject.toml  read_leveldb.py  requirements.txt  server.py  start.bat  start_bridge.bat  test_full_handshake.py  test_mcp_connection.py
.github/workflows/: ci.yml
Built_in/: auto_reply.py  conversation_store.py  generate_install_url.py  napcat_client.py
Configuration/: BotSettingConfig.json  config.example.json
Install/: install.bat  setup_env.py
OrderSystem/: __init__.py  base.py  bot.py  dismiss.py  help.py  log.py  master.py  model.py  ob.py  order.py  send.py
Temp/: __init__.py  order_whitelist.json  store.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHERRYSTUDIO_AUDIT_REPORT.md  CHERRYSTUDIO_TEST_PATH.md  COMMAND_REMEDIATION_REPORT.md  DESIGN_PHASE2_SSE_MCP.md  IMPLEMENTATION_PLAN.md  INSTALL_GUIDE.md  PROGRESS.md  PROTOCOL.md  ROADMAP.md  WorkReader.md
modules/: __init__.py  cherrystudio_module.py  command_module.py  conversation_store.py  md_to_image.py  message_bus.py  napcat_bridge.py  sse_parser.py
modules/ark_trpg/: __init__.py  skills.py
modules/commands/: __init__.py  ark_trpg.py  builtin.py  dice.py  log.py  utils.py
modules/dice_core/: __init__.py  character_store.py  dice_parser.py
modules/hooks/: __init__.py
protocols/: __init__.py  config_models.py  error_codes.py  messages.py
state/: __init__.py  manager.py  state_models.py
tests/: conftest.py  test_cherrystudio_module.py  test_command_module.py  test_conversation_store.py  test_dice_ark_log.py  test_integration_flow.py  test_md_to_image.py  test_message_bus.py  test_napcat_bridge.py  test_phase2.py  test_server.py  test_sse_parser.py  test_state_manager.py
tools/: generate_install_url.py
