[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qq-mcp-bridge"
version = "1.0.0"
description = "QQ MCP Bridge: Connect CherryStudio with QQ via NapCatQQ for multi-agent AI chat"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "RhineLab-magellan" }
]
keywords = ["qq", "mcp", "cherrystudio", "napcat", "bot", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "mcp>=1.0.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
]

[project.scripts]
qq-mcp-bridge = "server:main_sync"

[project.urls]
Homepage = "https://github.com/RhineLab-magellan/cherrystudio-qq-mcp"
Repository = "https://github.com/RhineLab-magellan/cherrystudio-qq-mcp"
Issues = "https://github.com/RhineLab-magellan/cherrystudio-qq-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "server.py",
    "Built_in/**/*.py",
    "OrderSystem/**/*.py",
    "Temp/**/*.py",
    "Temp/**/*.json",
    "Configuration/BotSettingConfig.json",
]
