[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cherrystudio-qq-mcp"
version = "3.0.0"
description = "QQ-MCP Bridge v3.0: Connect CherryStudio with QQ via NapCatQQ for multi-agent AI chat"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "RhineLab-magellan"},
]
keywords = ["qq", "mcp", "cherrystudio", "napcat", "bot", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "mcp>=1.0.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
    "html2image>=2.0.0",
    "playwright>=1.40.0",
    "markdown>=3.5.0",
    "Pillow>=10.0.0",
]

[project.scripts]
cherrystudio-qq-mcp = "server:main_sync"

[project.urls]
Homepage = "https://github.com/RhineLab-magellan/cherrystudio-qq-mcp"
Repository = "https://github.com/RhineLab-magellan/cherrystudio-qq-mcp"
Issues = "https://github.com/RhineLab-magellan/cherrystudio-qq-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["modules", "protocols", "state"]
include = [
    "server.py",
    "modules/**/*.py",
    "protocols/**/*.py",
    "state/**/*.py",
    "Configuration/BotSettingConfig.json",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "W", "F", "I", "N", "UP", "B", "C4"]
ignore = []
